add put method
