# static/swagger.json
@@ -54,7 +54,24 @@
                     "type" : "integer"
                 }
             }
-        }
+            },
+            "File_update": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                    "type": "string",
+                        "example": "file1"
+                    },
+                    "path": {
+                    "type": "string",
+                        "example": "/home/files"
+                    },
+                    "comment": {
+                    "type": "string",
+                        "example": "comment"
+                    }
+                }
+            }
         }
     },
 
@@ -247,6 +264,42 @@
                     },
                     "404": {
                         "description": "NOT FOUND",
+                        "schema": {
+                            "$ref": "#/components/schemas/File"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Update file"
+                ],
+                "description": "Обновление информации о файле по file_id",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/File_update"
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "file_id",
+                        "in": "path",
+                        "description": "file_id",
+                        "required": true,
+                        "type": "integer",
+                        "schema": {
+                            "$ref": "#/components/schemas/file_id"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/components/schemas/File"
                         }
